# huji-rich

./: .gitignore  .gitmodules  .travis.yml  Doxyfile  Makefile  README.md  SConstruct  mainpage.h
source/: CMakeLists.txt
source/ANN/: ANN.cpp  ANN.h  ANNperf.h  ANNx.h  bd_tree.cpp  bd_tree.h  kd_dump.cpp  kd_fix_rad_search.cpp  kd_pr_search.cpp  kd_pr_search.h  kd_search.cpp  kd_search.h  kd_split.cpp  kd_split.h  kd_tree.cpp  kd_tree.h  kd_util.cpp  kd_util.h  pr_queue.h  pr_queue_k.h
source/CG/: Diffusion.cpp  Diffusion.hpp  conj_grad_solve.cpp  conj_grad_solve.hpp
source/Radiation/: Diffusion.cpp  Diffusion.hpp  DiffusionForce.cpp  DiffusionForce.hpp  conj_grad_solve.cpp  conj_grad_solve.hpp
source/clipper/: clipper.cpp  clipper.hpp
source/convergence/: external_data.hpp
source/misc/: bisection.cpp  bisection.hpp  cached_lazy_list.hpp  hdf5_utils.cpp  hdf5_utils.hpp  horner.cpp  horner.hpp  int2str.cpp  int2str.hpp  io3D.cpp  io3D.hpp  lazy_list.hpp  mesh_generator.cpp  mesh_generator.hpp  mesh_generator3D.cpp  mesh_generator3D.hpp  serial_generate.hpp  serializable.cpp  serializable.hpp  simple_io.cpp  simple_io.hpp  triplet.hpp  universal_error.cpp  universal_error.hpp  utils.cpp  utils.hpp  vector_initialiser.hpp  vector_initliaser.hpp
source/mpi/: ConstNumberPerProc.cpp  ConstNumberPerProc.hpp  ConstNumberPerProc3D.cpp  ConstNumberPerProc3D.hpp  HilbertProcPositions.cpp  HilbertProcPositions.hpp  MeshPointsMPI.cpp  MeshPointsMPI.hpp  ProcessorUpdate.cpp  ProcessorUpdate.hpp  ProcessorUpdate3D.cpp  ProcessorUpdate3D.hpp  SetLoad.cpp  SetLoad.hpp  SetLoad3D.cpp  SetLoad3D.hpp  SingleLineProcMove.cpp  SingleLineProcMove.hpp  marshal.cpp  marshal.hpp  mpi_commands.cpp  mpi_commands.hpp  mpi_macro.cpp  mpi_macro.hpp
source/relativistic/: Hllc3D_SR.cpp  Hllc3D_SR.hpp  Hllc_SR.cpp  Hllc_SR.hpp  ideal_gas_SR.cpp  ideal_gas_SR.hpp
source/tessellation/: BCSides.cpp  BCSides.hpp  ConvexHull.cpp  ConvexHull.hpp  Delaunay.cpp  Delaunay.hpp  Edge.cpp  Edge.hpp  EdgeLengthCorrect.cpp  EdgeLengthCorrect.hpp  HilbertOrder.cpp  HilbertOrder.hpp  PolyIntersect.cpp  (+33 more)
(+1849 files in other folders)
